# tacos

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
resources/: coverage.tsv
src/: __metadata__.py  cover_plotter.py
src/cover_plotter/: cover_plotter.py
src/tacos/: tacos.py
