[metadata]
name = cover_plotter
version = attr: cover_plotter.cover_plotter.__version__
author = attr: cover_plotter.cover_plotter.__author__
author_email = attr: cover_plotter.cover_plotter.__contact__
description = Plot your coverage data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.izsvenezie.it/EdoardoGiussani/cover_plotter

classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    click>=8.0.1
    matplotlib>=3.4.2
    pandas>=1.2.4
entry_points=
    [console_scripts]
    coverplotter=cover_plotter.cover_plotter:main

[options.packages.find]
where = src