[metadata]
name = tacos
version = attr: tacos.tacos.__version__
author = attr: tacos.tacos.__author__
author_email = attr: tacos.tacos.__contact__
description = Plot your coverage data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.izsvenezie.it/EdoardoGiussani/tacos

classifiers =
Programming Language :: Python :: 3
Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    click>=8.0.1
    matplotlib>=3.4.2
    pandas>=1.2.4
    numpy<2.0.0
entry_points=
    [console_scripts]
    tacos=tacos.tacos:main

[options.packages.find]
where = src
